Realigned navbar, minor fixes elsewhere

--- a/FrontEnd/style.css
+++ b/FrontEnd/style.css
@@ -38,6 +38,7 @@ nav {
 }
 
 .navbar-list {
+  text-align: left;
   list-style-type: none;
   padding: 0;
   margin: 0 20px;
@@ -58,7 +59,7 @@ nav {
 }
 
 .navbar-right {
-	 float: right;
+  float: right;
 }
 
 .form-container {
